--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="imFooterBg"></div>
 		<div id="imPage">
 			<div id="imHeader">
-				<h1 class="imHidden">Главная - Заправка автокондиционера с выездом</h1>
+				<h1 class="imHidden">Заправка автокондиционера с выездом</h1>
 				
 			</div>
 			<a class="imHidden" href="#imGoToCont" title="Заголовок главного меню">Перейти к контенту</a>
