--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
 		<link rel="stylesheet" type="text/css" href="style/menu.css?12-0-6-24" media="screen" />
 		<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="style/ie.css?12-0-6-24" media="screen" /><![endif]-->
 		<link rel="stylesheet" type="text/css" href="pcss/index.css?12-0-6-24-637317571886718876" media="screen" />
+		<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(66047401, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/66047401" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 		
 		<script type="text/javascript" src="res/jquery.js?12-0-6-24"></script>
 		<script type="text/javascript" src="res/x5engine.js?12-0-6-24" data-files-version="12-0-6-24"></script>
