--- a/index.html
+++ b/index.html
@@ -121,23 +121,9 @@
 				<div class="imClear"></div>
 			</div>
 			<div id="imFooter">
-			
-			<!-- Yandex.Metrika counter -->
-                        <script type="text/javascript" >
-                         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-                         m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-                         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-                          ym(66047401, "init", {
-                          clickmap:true,
-                          trackLinks:true,
-                          accurateTrackBounce:true
-                            });
-                        </script>
-                        <noscript><div><img src="https://mc.yandex.ru/watch/66047401" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-                        <!-- /Yandex.Metrika counter -->
+			<!-- Yandex.Metrika informer --> <a href="https://metrika.yandex.ru/stat/?id=66049414&amp;from=informer" target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/66049414/1_1_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры)" /></a> <!-- /Yandex.Metrika informer --> <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(66049414, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/66049414" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 				
-			</div>
+		        </div>
 		</div>
 		<span class="imHidden"><a href="#imGoToCont" title="Прочесть эту страницу заново">Назад к содержимому</a> | <a href="#imGoToMenu" title="Прочесть этот сайт заново">Назад к главному меню</a></span>
 		
