--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                   Заправка спец техники.
                    Обслуживание таксопарков.
                    Мелкий ремонт, замена трубок, уплотнительных колец, поиск утечек.
-                  Выезд от 500р в ближайшие районы.
+                  Выезд от 500р в ближайшие районы метро Выхино.
                  Никаких дозаправок по давлению!
                  Заправка только новым газом в полном объёме для вашего автомобиля.
                  Хладагент 134a. Масло pag 100. pag 46." />
