--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
+  
+  <!-- SVG Favicon (встроенный прямо в HTML) -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
+  
+  <!-- Альтернативные иконки для разных платформ -->
+  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
+  <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>" sizes="192x192">
+  
   <!-- Подключение Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Иконки Font Awesome -->
