--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
   
-  <!-- SVG Favicon (встроенный прямо в HTML) -->
+  <!-- SVG Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
-  
-  <!-- Альтернативные иконки для разных платформ -->
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
-  <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>" sizes="192x192">
-  
+
   <!-- Подключение Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Иконки Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Подключение внешней таблицы стилей -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Предзагрузка основного изображения для ускорения загрузки -->
+  <link rel="preload" href="https://images.unsplash.com/photo-1547036967-23d11aacaee0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80" as="image">
 </head>
 <body>
 
-<header>
+<header style="background-image: url('https://images.unsplash.com/photo-1547036967-23d11aacaee0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80'); background-size: cover; background-position: center;">
   <div class="logo-container">
     <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff" opacity="0.8"/>
