--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Предзагрузка нового тематического изображения -->
-  <link rel="preload" href="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80" as="image">
+  <link rel="preload" href="https://i.imgur.com/JV8JS9h.jpg" as="image">
 </head>
 <body>
 
-<header style="background-image: url('https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80'); background-size: cover; background-position: center;">
+<header style="background-image: url('https://i.imgur.com/JV8JS9h.jpg'); background-size: cover; background-position: center;">
   <div class="logo-container">
     <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff" opacity="0.8"/>
