--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <!-- Подключение внешней таблицы стилей -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Предзагрузка нового тематического изображения -->
-  <link rel="preload" href="https://i.imgur.com/JV8JS9h.jpg" as="image">
+  <!-- Предзагрузка выбранного изображения -->
+  <link rel="preload" href="https://avatars.mds.yandex.net/get-altay/902827/2a000001905de8ac8fd7ba3aad0d4fcf133e/XXXL.webp" as="image">
 </head>
 <body>
 
-<header style="background-image: url('https://i.imgur.com/JV8JS9h.jpg'); background-size: cover; background-position: center;">
+<header style="background-image: url('https://avatars.mds.yandex.net/get-altay/902827/2a000001905de8ac8fd7ba3aad0d4fcf133e/XXXL.webp'); background-size: cover; background-position: center;">
   <div class="logo-container">
     <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff" opacity="0.8"/>
