--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
   
-  <!-- SVG Favicon -->
+  <!-- Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
 
@@ -16,13 +16,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Подключение внешней таблицы стилей -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Предзагрузка выбранного изображения -->
-  <link rel="preload" href="https://avatars.mds.yandex.net/get-altay/902827/2a000001905de8ac8fd7ba3aad0d4fcf133e/XXXL.webp" as="image">
 </head>
 <body>
 
-<header style="background-image: url('https://avatars.mds.yandex.net/get-altay/902827/2a000001905de8ac8fd7ba3aad0d4fcf133e/XXXL.webp'); background-size: cover; background-position: center;">
+<header>
   <div class="logo-container">
     <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff" opacity="0.8"/>
