--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
   
-  <!-- Favicon -->
+  <!-- SVG Favicon (встроенный в HTML) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
 
@@ -88,9 +88,9 @@
 <footer>
   <p>&copy; 2024 AC Service. Все права защищены.</p>
   <div class="social-links">
-    <a href="https://vk.com/" target="_blank"><i class="fab fa-vk"></i></a>
-    <a href="https://telegram.org/" target="_blank"><i class="fab fa-telegram"></i></a>
-    <a href="https://wa.me/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://vk.com/" target="_blank" aria-label="ВКонтакте"><i class="fab fa-vk"></i></a>
+    <a href="https://telegram.org/" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+    <a href="https://wa.me/" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
   </div>
 </footer>
 
