--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Подключение внешней таблицы стилей -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- Yandex.Metrika -->
+<script>
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  ym(12345678, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true });
+</script>
 </head>
 <body>
 
