--- a/index.html
+++ b/index.html
@@ -140,12 +140,13 @@
       <span>г. Москва, ул. Автозаводская, 23</span>
     </div>
   </div>
+  
 <footer>
   <p>&copy; 2024 AC Service. Все права защищены.</p>
   <div class="social-links">
-    <a href="https://vk.com/" target="_blank" aria-label="ВКонтакте"><i class="fab fa-vk"></i></a>
-    <a href="https://telegram.org/" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
-    <a href="https://wa.me/" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://vk.com/" target="_blank" title="ВКонтакте"><i class="fab fa-vk"></i></a>
+    <a href="https://telegram.org/" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
+    <a href="https://wa.me/" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
   </div>
 </footer>
 
