--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
         </select>
       </div>
 
-      <div class="form-row">
-        <div class="form-group half-width">
-          <label for="date"><i class="fas fa-calendar-day"></i> Дата:</label>
-          <input type="date" id="date" name="date" min="2024-01-01" required>
-        </div>
-        <div class="form-group half-width">
-          <label for="time"><i class="fas fa-clock"></i> Время:</label>
-          <input type="time" id="time" name="time" min="09:00" max="18:00" required>
-        </div>
-      </div>
+<div class="form-row">
+  <div class="form-group half-width" style="margin-right: 20px;">
+    <label for="date"><i class="fas fa-calendar-day"></i> Дата:</label>
+    <input type="date" id="date" name="date" min="2024-01-01" required>
+  </div>
+  <div class="form-group half-width">
+    <label for="time"><i class="fas fa-clock"></i> Время:</label>
+    <input type="time" id="time" name="time" min="09:00" max="18:00" required>
+  </div>
+</div>
 
       <button type="submit" class="submit-btn">
         <i class="fas fa-paper-plane"></i> Записаться сейчас
