--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <!-- Подключение внешней таблицы стилей -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Yandex.Metrika -->
-<script>
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-  ym(12345678, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true });
-</script>
+  <script>
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    ym(12345678, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true });
+  </script>
 </head>
 <body>
 
@@ -96,16 +96,16 @@
         </select>
       </div>
 
-<div class="form-row">
-  <div class="form-group half-width" style="margin-right: 20px;">
-    <label for="date"><i class="fas fa-calendar-day"></i> Дата:</label>
-    <input type="date" id="date" name="date" min="2024-01-01" required>
-  </div>
-  <div class="form-group half-width">
-    <label for="time"><i class="fas fa-clock"></i> Время:</label>
-    <input type="time" id="time" name="time" min="09:00" max="18:00" required>
-  </div>
-</div>
+      <div class="form-row">
+        <div class="form-group half-width" style="margin-right: 20px;">
+          <label for="date"><i class="fas fa-calendar-day"></i> Дата:</label>
+          <input type="date" id="date" name="date" min="2024-01-01" required>
+        </div>
+        <div class="form-group half-width">
+          <label for="time"><i class="fas fa-clock"></i> Время:</label>
+          <input type="time" id="time" name="time" min="09:00" max="18:00" required>
+        </div>
+      </div>
 
       <button type="submit" class="submit-btn">
         <i class="fas fa-paper-plane"></i> Записаться сейчас
@@ -140,7 +140,8 @@
       <span>г. Москва, ул. Автозаводская, 23</span>
     </div>
   </div>
-  
+</section>
+
 <footer>
   <p>&copy; 2024 AC Service. Все права защищены.</p>
   <div class="social-links">
