--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
   
-  <!-- SVG Favicon (встроенный в HTML) -->
+  <!-- SVG Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
 
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Иконки Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- Подключение внешней таблицы стилей -->
+  <!-- Подключение CSS -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Yandex.Metrika -->
   <script>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="form-row">
-        <div class="form-group half-width" style="margin-right: 20px;">
+        <div class="form-group half-width">
           <label for="date"><i class="fas fa-calendar-day"></i> Дата:</label>
           <input type="date" id="date" name="date" min="2024-01-01" required>
         </div>
