--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
 
 <footer>
   <p>&copy; 2024 AC Service. Все права защищены.</p>
+  <div class="footer-links">
+    <a href="sitemap.xml" target="_blank">Карта сайта</a>
+    <a href="/privacy">Политика конфиденциальности</a>
+  </div>
   <div class="social-links">
     <a href="https://vk.com/" target="_blank" title="ВКонтакте"><i class="fab fa-vk"></i></a>
     <a href="https://telegram.org/" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
