--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Заправка автокондиционеров | AC Service</title>
   <meta name="description" content="Профессиональная заправка и обслуживание автокондиционеров">
   
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+  
   <!-- SVG Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect x='8' y='24' width='48' height='20' rx='4' fill='%23007bff'/><circle cx='16' cy='44' r='4' fill='%23007bff'/><circle cx='48' cy='44' r='4' fill='%23007bff'/></svg>">
