--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
     <div class="contact-item">
       <i class="fas fa-map-marker-alt"></i>
-      <span>г. Москва, ул. Автозаводская, 23</span>
+      <span>г. Москва, ул. Люберка, 1/1А</span>
     </div>
   </div>
 </section>
