--- a/index.html
+++ b/index.html
@@ -91,10 +91,19 @@
   </div>
 </header>
 
+<!-- Внутри <nav> заменим текущее содержимое -->
 <nav>
-  <a href="#services"><i class="fas fa-tools"></i> Услуги</a>
-  <a href="#about"><i class="fas fa-info-circle"></i> О нас</a>
-  <a href="#contact"><i class="fas fa-calendar-check"></i> Записаться</a>
+  <button class="burger-menu" aria-label="Меню">
+    <span class="burger-bar"></span>
+    <span class="burger-bar"></span>
+    <span class="burger-bar"></span>
+  </button>
+  
+  <div class="nav-links">
+    <a href="#services"><i class="fas fa-tools"></i> Услуги</a>
+    <a href="#about"><i class="fas fa-info-circle"></i> О нас</a>
+    <a href="#contact"><i class="fas fa-calendar-check"></i> Записаться</a>
+  </div>
 </nav>
 
 <section id="about">
