--- a/index.html
+++ b/index.html
@@ -79,7 +79,23 @@
   </script>
 </head>
 <body>
+ <!-- Вставьте этот код сразу после открывающего тега <body> -->
+<script>
+  (function(m,e,t,r,i,k,a){
+    m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+  })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+  ym(66049414, "init", {
+    clickmap: true,
+    trackLinks: true,
+    accurateTrackBounce: true,
+    webvisor: true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/ВАШ_ID_СЧЕТЧИКА" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  
 <header>
   <div class="logo-container">
     <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
