--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     webvisor: true
   });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/ВАШ_ID_СЧЕТЧИКА" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/66049414" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   
 <header>
   <div class="logo-container">
