--- a/index.html
+++ b/index.html
@@ -258,7 +258,74 @@
     </div>
   </div>
 </section>
+ <!-- Вставьте после секции с фото работ -->
+<section id="reviews" class="reviews">
+  <h2><i class="fas fa-comment-dots"></i> Отзывы клиентов</h2>
+  
+  <div class="reviews-container">
+    <!-- Отзыв 1 -->
+    <div class="review-card">
+      <div class="review-header">
+        <div class="user-info">
+          <div class="user-avatar">
+            <i class="fas fa-user-circle"></i>
+          </div>
+          <div class="user-name">Андрей Смирнов</div>
+        </div>
+        <div class="review-rating">
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <div class="rating-value">4.8</div>
+        </div>
+      </div>
+      <p class="review-text">
+        Отличный сервис! Быстро заправили кондиционер, дали советы по уходу. 
+        Цены адекватные, оборудование современное. Обязательно вернусь!
+      </p>
+      <div class="review-date">15 марта 2024</div>
+    </div>
 
+    <!-- Отзыв 2 -->
+    <div class="review-card">
+      <div class="review-header">
+        <div class="user-info">
+          <div class="user-avatar">
+            <i class="fas fa-user-circle"></i>
+          </div>
+          <div class="user-name">Мария Иванова</div>
+        </div>
+        <div class="review-rating">
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <div class="rating-value">5.0</div>
+        </div>
+      </div>
+      <p class="review-text">
+        Лучшие в Москве! Починили систему за 2 часа, нашли утечку фреона.
+        Персонал вежливый, есть кофе и Wi-Fi пока ждешь. Рекомендую!
+      </p>
+      <div class="review-date">12 марта 2024</div>
+    </div>
+  </div>
+
+  <!-- Кнопка "Все отзывы" -->
+  <div class="reviews-footer">
+    <button class="show-all-reviews">
+      <i class="fas fa-chevron-down"></i> Показать все отзывы
+    </button>
+  </div>
+</section>
+  
 <footer>
   <p>&copy; 2010-2024 AC Service. Все права защищены.</p>
   <div class="footer-links">
