--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       </div>
       <p class="review-text">
         Лучшие в Москве! Починили систему за 2 часа, нашли утечку фреона.
-        Персонал вежливый, есть кофе и Wi-Fi пока ждешь. Рекомендую!
+        Мастер вежливый. Рекомендую!
       </p>
       <div class="review-date">12 марта 2024</div>
     </div>
