--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     <!-- Подключение скриптов -->
     <script src="https://unpkg.com/imask"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш_api_ключ&lang=ru_RU" defer></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=6a008034-faa2-4fb0-8d62-671062ab8aaf&lang=ru_RU" defer></script>
     <script src="js/main.js" defer></script>
 </body>
 </html>
