--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Open Graph / Социальные метатеги -->
     <meta property="og:title" content="AC Service - заправка автокондиционеров">
     <meta property="og:description" content="Профессиональное обслуживание автокондиционеров в Москве">
-    <meta property="og:image" content="https://ac-service.ru/images/social-preview.jpg">
-    <meta property="og:url" content="https://ac-service.ru/">
+    <meta property="og:image" content="https://condi-av.github.io/images/social-preview.jpg">
+    <meta property="og:url" content="https://condi-av.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
 
@@ -26,7 +26,7 @@
     <meta name="geo.position" content="55.692252,37.924886">
     <meta name="ICBM" content="55.692252, 37.924886">
 
-    <link rel="canonical" href="https://ac-service.ru/blog" />
+    <link rel="canonical" href="https://condi-av.github.io/blog" />
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
@@ -43,10 +43,10 @@
         "@context": "https://schema.org",
         "@type": "AutoRepair",
         "name": "AC Service",
-        "image": "https://ac-service.ru/images/logo.jpg",
-        "@id": "https://ac-service.ru/",
-        "url": "https://ac-service.ru/",
-        "telephone": "+79854549486",
+        "image": "https://condi-av.github.io/images/logo.jpg",
+        "@id": "https://condi-av.github.io/",
+        "url": "https://condi-av.github.io/",
+        "telephone": "+79164449371",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "ул. Люберка, 1/1А",
@@ -348,7 +348,7 @@
                 <h3 class="contact-info-title"><i class="fas fa-map-marker-alt"></i> Наш адрес</h3>
                 <p class="contact-info-text"><i class="fas fa-map-marker-alt"></i> г. Москва, ул. Люберка, 1/1А</p>
                 <p class="contact-info-text"><i class="fas fa-clock"></i> Пн-Сб: 9:00-21:00</p>
-                <p class="contact-info-text"><i class="fas fa-phone"></i> <a href="tel:+79854549486" class="contact-link">+7 (985) 454-94-86</a></p>
+                <p class="contact-info-text"><i class="fas fa-phone"></i> <a href="tel:+79164449371" class="contact-link">+7 (916) 444-93-71</a></p>
                 
                 <div id="map" class="map-container"></div>
                 
