--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <link rel="canonical" href="https://condi-av.github.io/blog" />
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/logo-icon.svg" type="image/svg+xml">
+    <link rel="mask-icon" href="/logo-icon.svg" color="#2980b9">
 
     <!-- Подключение стилей -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
