--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="canonical" href="https://condi-av.github.io/blog" />
 
     <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/logo-icon.svg" type="image/svg+xml">
     <link rel="mask-icon" href="/logo-icon.svg" color="#2980b9">
 
