--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <link rel="canonical" href="https://condi-av.github.io/blog" />
 
-   <!-- Favicon -->
-   <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="any">
-   <link rel="icon" href="logo-icon.svg" type="image/svg+xml">
-   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-   <link rel="manifest" href="site.webmanifest">
+    <!-- Favicon -->
+    <link rel="icon" href="https://condi-av.github.io/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://condi-av.github.io/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://condi-av.github.io/logo-icon.svg" type="image/svg+xml">
+    <link rel="mask-icon" href="https://condi-av.github.io/logo-icon.svg" color="#2980b9">
 
     <!-- Подключение стилей -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
