--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
       <option value="">-- Выберите услугу --</option>
       <option value="Заправка">Заправка кондиционера</option>
       <option value="Ремонт">Ремонт системы</option>
+      <option value="Чистка">Чистка системы</option>
+      <option value="Климат-контроль">Ремонт климат-контроля</option>
     </select>
   </div>
   
