--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <div class="footer-content">
             <p class="copyright">&copy; 2015-2025 AC Service. Все права защищены.</p>
             <div class="footer-links">
-                <a href="/privacy" class="footer-link">Политика конфиденциальности</a>
+                <a href="/privacy.html" class="footer-link">Политика конфиденциальности</a>
                 <a href="/sitemap.xml" class="footer-link">Карта сайта</a>
             </div>
             <div class="social-links">
