--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="geo.position" content="55.692252,37.924886">
     <meta name="ICBM" content="55.692252, 37.924886">
 
-    <link rel="canonical" href="https://condi-av.github.io/blog" />
+    <link rel="canonical" href="https://condi-av.github.io/" />
 
     <!-- Favicon -->
     <link rel="icon" href="https://condi-av.github.io/favicon.ico" type="image/x-icon">
