--- a/index.html
+++ b/index.html
@@ -364,8 +364,18 @@
         </div>
     </footer>
 
-<!-- В конце body замените подключение скриптов на: -->
-<script src="https://unpkg.com/imask"></script>
-<script src="js/main.js" defer></script>
+     <!-- В конце body замените подключение скриптов на: -->
+   <script src="https://unpkg.com/imask"></script>
+   <script src="js/main.js" defer></script>
+    <!-- Плавающая кнопка "Позвонить" -->
+<a href="tel:+79164449371" class="floating-call-btn" aria-label="Позвонить в AC Service">
+  <i class="fas fa-phone"></i>
+  <span class="call-text">Звоните!</span>
+</a>
+
+<!-- Плавающая кнопка WhatsApp (дополнительно) -->
+<a href="https://wa.me/79164449371" class="floating-whatsapp-btn" aria-label="Написать в WhatsApp" target="_blank" rel="noopener">
+  <i class="fab fa-whatsapp"></i>
+</a>
 </body>
 </html>
