--- a/index.html
+++ b/index.html
@@ -108,14 +108,18 @@
         </div>
     </nav>
 
-    <section id="about" class="about-section">
-        <h2 class="section-title">О нашей компании</h2>
-        <div class="about-content">
-            <p>AC Service - это профессиональный сервис по обслуживанию автомобильных кондиционеров в Москве. Мы работаем с 2015 года и за это время обслужили более 2000 автомобилей различных марок.</p>
-            <p>Наши мастера имеют сертификаты и регулярно проходят обучение. Мы используем только профессиональное оборудование и оригинальные материалы.</p>
-            <p>Гарантия на все виды работ - 12 месяцев.</p>
-        </div>
-    </section>
+<section id="about" class="about-section">
+    <h2 class="section-title">О нашей компании</h2>
+    <div class="about-content">
+        <p><strong>AC Service: профессиональный ремонт автокондиционеров от одного мастера</strong></p>
+        <p>Лично обслуживаю автомобильные кондиционеры с 2015 года — более 2000 авто всех марок. Работаю без посредников: от диагностики до гарантии (12 месяцев) всё делаю самостоятельно.</p>
+        <p>✔ Профессиональное оборудование<br> 
+           ✔ Оригинальные материалы<br>
+           ✔ Проверка 10+ параметров системы</p>
+        <p><strong>Ваши преимущества:</strong><br>
+           Прямой контакт с мастером · Гибкий график · Устранение причин неисправностей</p>
+    </div>
+</section>
 
 <section id="services" class="services-section">
     <h2 class="section-title">Профессиональные услуги по обслуживанию автокондиционеров</h2>
