--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
            ✔ Оригинальные материалы<br>
            ✔ Проверка 10+ параметров системы</p>
         <p><strong>Ваши преимущества:</strong><br>
-           Прямой контакт с мастером · Гибкий график · Устранение причин неисправностей</p>
+           Прямой контакт с мастером ✅ Гибкий график ✅ Устранение причин неисправностей</p>
     </div>
 </section>
 
