--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
             </div>
             <div class="contact-info">
                 <h3 class="contact-info-title"><i class="fas fa-map-marker-alt"></i> Наш адрес</h3>
-                <p class="contact-info-text"><i class="fas fa-map-marker-alt"></i> г. Москва, ул. Люберка, 1/1А</p>
+                <p class="contact-info-text"><i class="fas fa-map-marker-alt"></i> г. Москва, ул.Салтыковская 8с24 </p>
                 <p class="contact-info-text"><i class="fas fa-clock"></i> Пн-Сб: 9:00-21:00</p>
                 <p class="contact-info-text"><i class="fas fa-phone"></i> <a href="tel:+79164449371" class="contact-link">+7 (916) 444-93-71</a></p>
                 
                 <div id="map" class="map-container"></div>
                 
-                <a href="https://yandex.ru/maps/?rtext=~55.692252,37.924886" class="route-btn">
+                <a href="https://yandex.ru/maps/?rtext=~55.726548,37.867609" class="route-btn">
                     <i class="fas fa-route"></i> Проложить маршрут
                 </a>
             </div>
