--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <li><i class="fas fa-check-circle"></i> Снижение стоимости дальнейшего обслуживания в 3-5 раз</li>
                 <li><i class="fas fa-check-circle"></i> Гарантия на работу и комплектующие 12 месяцев</li>
             </ul>
-            <div class="service-price">от 200 000 ₽</div>
+            <div class="service-price"> Договорная </div>
             <div class="service-keywords">
                 <span>#заменаR744наR134a</span>
                 <span>#переделкаCO2</span>
