--- a/index.html
+++ b/index.html
@@ -218,14 +218,17 @@
     <h2 class="section-title">Результаты работ по замене R744 на R134a</h2>
     <p class="section-subtitle">Фотоотчеты реальных переделок. Нажмите на фото для увеличения.</p>
     <div class="gallery-container">
-        <a href="images/gallery/conversion-result-1.webp" class="gallery-item" data-fancybox="gallery" data-caption="Замена компрессора и магистралей на VW Golf">
-            <img src="images/gallery/conversion-result-1-thumb.webp" alt="Результат переделки системы кондиционера VW Golf с R744 на R134a" loading="lazy">
+        <a href="images/gallery/conversion-result-1.webp" class="gallery-item" data-fancybox="gallery" data-caption="Замена системы R744 (CO2) на R134a Mercedes-Benz W222">
+            <img src="images/gallery/conversion-result-1-thumb.webp" alt="Результат переделки системы кондиционера Mercedes-Benz W222 с R744 на R134a" loading="lazy">
         </a>
-        <a href="images/gallery/conversion-result-2.webp" class="gallery-item" data-fancybox="gallery" data-caption="Установка нового конденсатора на Audi A3">
-            <img src="images/gallery/conversion-result-2-thumb.webp" alt="Установка конденсатора под R134a Audi A3" loading="lazy">
+        <a href="images/gallery/conversion-result-2.webp" class="gallery-item" data-fancybox="gallery" data-caption="R134a на Mercedes-Benz W222">
+            <img src="images/gallery/conversion-result-2-thumb.webp" alt="Установка R134a на Mercedes-Benz W222" loading="lazy">
         </a>
-        <a href="images/gallery/conversion-result-3.webp" class="gallery-item" data-fancybox="gallery" data-caption="Комплект для переоборудования">
-            <img src="images/gallery/conversion-result-3-thumb.webp" alt="Комплект запчастей для замены R744 на R134a" loading="lazy">
+        <a href="images/gallery/conversion-result-3.webp" class="gallery-item" data-fancybox="gallery" data-caption="Заправка R134a на Mercedes-Benz W222">
+            <img src="images/gallery/conversion-result-3-thumb.webp" alt="Диагностика и заправка R134a на Mercedes-Benz W222" loading="lazy">
+        </a>
+        <a href="images/gallery/conversion-result-4.webp" class="gallery-item" data-fancybox="gallery" data-caption="Контрольные замеры после заправки R134a на Mercedes-Benz W222">
+            <img src="images/gallery/conversion-result-4-thumb.webp" alt="Результаты замеров после заправки R134a на Mercedes-Benz W222 " loading="lazy">
         </a>
         <!-- Добавьте еще столько фото, сколько нужно -->
     </div>
