--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         <h2 class="section-title">Записаться на обслуживание</h2>
         <div class="contact-container">
             <div class="contact-form">
-<form id="appointmentForm" action="https://formspree.io/f/mqaqaezj" method="POST">
+  <form id="appointmentForm">
   <input type="hidden" name="_language" value="ru"> <!-- Русский язык уведомлений -->
   <input type="hidden" name="_subject" value="Новая заявка с сайта AC Service">
   
