--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         "telephone": "+79164449371",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "ул. Люберка, 1/1А",
+            "streetAddress": "ул. Салтыковская 8с24",
             "addressLocality": "Москва",
             "postalCode": "109316",
             "addressCountry": "RU"
         },
         "geo": {
             "@type": "GeoCoordinates",
-            "latitude": 55.692252,
-            "longitude": 37.924886
+            "latitude": 55.726548,
+            "longitude": 37.867609
         },
         "openingHoursSpecification": {
             "@type": "OpeningHoursSpecification",
@@ -172,20 +172,7 @@
             </div>
         </div>
         
-        <div class="service-card">
-            <div class="service-icon"><i class="fas fa-wind"></i></div>
-            <h3 class="service-title">Чистка системы кондиционирования</h3>
-            <p class="service-description">
-                Антибактериальная обработка испарителя, дезинфекция воздуховодов. 
-                Устранение неприятных запахов. Используем немецкие очистители Sonax.
-            </p>
-            <div class="service-price">от 2000 ₽</div>
-            <div class="service-keywords">
-                <span>#чистка автокондиционера</span>
-                <span>#удаление запаха</span>
-                <span>#дезинфекция системы</span>
-            </div>
-        </div>
+
         
         <div class="service-card">
             <div class="service-icon"><i class="fas fa-car-battery"></i></div>
