--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <meta name="geo.region" content="RU-MOW">
     <meta name="geo.placename" content="Москва">
-    <meta name="geo.position" content="55.692252,37.924886">
-    <meta name="ICBM" content="55.692252, 37.924886">
+    <meta name="geo.position" content="55.726548,37.867609">
+    <meta name="ICBM" content="55.726548, 37.867609">
 
     <link rel="canonical" href="https://condi-av.github.io/" />
 
@@ -76,17 +76,20 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/66049414" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     
-    <header class="main-header">
-        <div class="logo-container">
-            <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-label="Логотип AC Service" role="img">
-                <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff"/>
-                <circle cx="16" cy="44" r="4" fill="#fff"/>
-                <circle cx="48" cy="44" r="4" fill="#fff"/>
-            </svg>
-            <div class="logo-text">AC Service</div>
-        </div>
-        <p class="header-subtitle">Профессиональная заправка и ремонт автокондиционеров в Москве</p>
-    </header>
+   <header class="main-header">
+    <div class="logo-container">
+        <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-label="Логотип AC Service" role="img">
+            <rect x="8" y="24" width="48" height="20" rx="4" fill="#fff"/>
+            <circle cx="16" cy="44" r="4" fill="#fff"/>
+            <circle cx="48" cy="44" r="4" fill="#fff"/>
+        </svg>
+        <div class="logo-text">AC Service</div>
+    </div>
+    <p class="header-subtitle">
+        <span class="typed-text" id="typed-text"></span>
+        <span class="cursor">&nbsp;</span>
+    </p>
+   </header>
 
     <nav class="main-nav">
         <button class="burger-menu" aria-label="Меню" aria-expanded="false" aria-controls="nav-links">
