--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Профессиональная замена ❄️🔧 С02 (R744) на R134a в Москве | MOS-AC-SERVICE 🛠️</title>
     <meta name="description" content="Профессиональная замена системы кондиционирования 💨✅ R744 (С02) на R134a в Москве. Качественные услуги по доступным ценам. 💰👌 Гарантия на работы. 📋🛡️">
     <meta name="keywords" content="замена R744 на R134a, Mercedes-Benz W222, кондиционер автомобиля, R744 CO2, R134a, замена хладагента, Москва, автосервис">
+    <meta name="google-site-verification" content="1CL06ygwQ1e3Nwo0FPkGvO8YJvt0AXUNRbRO3R6PBLs" />
     
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
